overflow tooltip still stretches outside the column width but the correct number of icons appears

--- a/jsx_refactor/client/automation-finder/src/components/TriggerCards/style.css
+++ b/jsx_refactor/client/automation-finder/src/components/TriggerCards/style.css
@@ -53,3 +53,15 @@
 .space {
     margin-right: 5px;
 }
+
+.triggered-by {
+    position: fixed;
+    z-index: 3;
+}
+
+.extras-tip {
+    width: 100px,
+    /* word-break: break-all,
+    overflow-wrap: break-word,
+    display: "block" */
+}
